{
    "name": "GameInput",
    "maps": [
        {
            "name": "Player1",
            "id": "ba309b58-31e6-4bfa-baa0-d0cc2c52c097",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "064eb92b-43ee-4e82-bc1f-a1acab86501e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "9acfed35-53c1-4bc1-b764-6b545b5fa214",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FastDrop",
                    "type": "Button",
                    "id": "230bac3b-b408-4bc9-a6c2-82afa3f9e518",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b5bbcdd6-d90e-41c6-9606-6d36584d4fa0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b323f0b-2ae2-4cf3-9873-f5b09245c2bf",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b35132a-92eb-45bd-8dac-32121b382bd4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FastDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2",
            "id": "8d076600-24e1-42ca-97b4-46dc81ccf147",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "95e5b6a2-e69b-4d97-a2b0-4e8d68766a83",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "279cbec6-99ee-46a6-a5cb-0f2efa2f7878",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FastDrop",
                    "type": "Button",
                    "id": "247b2e48-501a-4649-b3c3-625367f2bc14",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c64d22b0-c98a-4470-aa43-b94fa3ce54ec",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91fcae4b-9ade-4f7e-8141-7cd1399d8a7d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98d15374-9317-4301-99fc-38da353fb602",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FastDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Tetris",
            "bindingGroup": "Tetris",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}